highlight active notes :tada:

--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -1,4 +1,4 @@
 .pianoroll-border {
-    border: 8px solid tomato;
-    padding: 10px;
+    border: 3px solid black;
+    padding: 0px !important;
 }
