--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -1,25 +1,32 @@
 .container {
   position: relative;
+  padding: 0 !important;
 }
 
-.pianoroll-border {
-    border: 3px solid black;
-    padding: 0px !important;
+.row {
+  margin: 0 !important;
+}
+
+.pianoroll-player {
+  position: relative;
+  border: 3px solid black;
+  padding: 0px !important;
+  background-color: #f0f0f0;
+}
+
+/* .pianoroll-border {
+  border: 3px solid black;
+  padding: 0px !important;
 }
 
 .pianoroll-background {
-  background-color: #F0F0F0;
-}
+  background-color: #f0f0f0;
+} */
 
 .note-rectangle {
-  transition:
-    width 1.3s ease-in-out,
-    height 1.3s ease-in-out,
-    x 1.3s ease-in-out,
-    y 1.3s ease-in-out,
-    fill 1.3s ease-in-out;
+  transition: width 1.3s ease-in-out, height 1.3s ease-in-out,
+    x 1.3s ease-in-out, y 1.3s ease-in-out, fill 1.3s ease-in-out;
 }
-
 
 .note-rectangle.active {
   transition-property: width, height, x, y;
@@ -27,9 +34,9 @@
 }
 
 midi-player::part(control-panel) {
-	background: #F0F0F0;
-	color: black;
-	border-radius: 8px;
+  background: #f0f0f0;
+  color: black;
+  border-radius: 8px;
 }
 
 .pianoroll-link {
@@ -43,4 +50,81 @@ midi-player::part(control-panel) {
 
 .pianoroll-link:hover {
   transform: scale(1.2); /* Grow by 20% on hover */
+}
+
+.buttons-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.button {
+  height: 2.5rem;
+  padding: 0.625rem 0.75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  border-radius: 0.5rem;
+
+  appearance: none;
+  font-size: 0.875rem;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+
+  background-color: #f0f0f0;
+  border: 3px solid #f0f0f0;
+  color: #000000;
+}
+
+.button:hover {
+  background-color: #000000;
+  border: 3px solid #000000;
+  color: #ffffff;
+}
+
+.button:active {
+  background-color: #f0f0f0;
+  border: 3px solid #5c5c5c;
+  color: #000000;
+}
+
+.control-panel {
+  height: 60px;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
+.container.theater-mode {
+  width: 100%;
+  max-width: 100vw;
+}
+
+.container.theater-mode > .row:first-child {
+  background-color: red;
+  /* padding: 0 20% !important; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container.fullscreen-mode {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.container.fullscreen-mode > .row:first-child {
+  height: calc(100% - 60px);
+}
+
+.container.fullscreen-mode #my-svg {
+  height: 100%;
+  position: absolute;
 }
