--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -7,7 +7,7 @@
   margin: 0 !important;
 }
 
-.pianoroll-player {
+.pianoroll-svg-wrapper {
   position: relative;
   border: 3px solid black;
   padding: 0px !important;
@@ -31,12 +31,14 @@ midi-player::part(control-panel) {
 }
 
 .pianoroll-link {
+  display: flex;
   position: absolute;
-  top: 2px;
-  right: 6px;
+  top: 4px;
+  right: 4px;
   width: 20px; /* Initial width */
   height: 20px; /* Initial height */
-  transition: transform 0.4s ease; /* Smooth transition for scaling */
+  transition: transform 0.3s ease; /* Smooth transition for scaling */
+  transform-origin: top right;
 }
 
 .pianoroll-link:hover {
@@ -44,44 +46,37 @@ midi-player::part(control-panel) {
 }
 
 .buttons-wrapper {
+  position: absolute;
+  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  gap: 8px;
+  gap: 4px;
+  bottom: 0;
+  z-index: 100;
+  pointer-events: none;
+  opacity: 0;
 }
 
 .button {
   height: 2.5rem;
-  padding: 0.625rem 0.75rem;
+  width: 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   margin: 0;
-  border-radius: 0.5rem;
-
+  padding: 0;
   appearance: none;
-  font-size: 0.875rem;
-  font-weight: 600;
-  text-align: center;
+  border: none;
   cursor: pointer;
-  transition: background-color 0.3s ease, border-color 0.3s ease;
-
-  background-color: #f0f0f0;
-  border: 3px solid #f0f0f0;
-  color: #000000;
-}
-
-.button:hover {
-  background-color: #000000;
-  border: 3px solid #5c5c5c;
   color: #ffffff;
+  background-color: transparent;
+  overflow: hidden;
+  pointer-events: all;
 }
 
-.button:active {
-  background-color: #f0f0f0;
-  border: 3px solid #5c5c5c;
-  color: #000000;
+.button:hover svg {
+  animation: pulse 0.3s ease-in-out;
 }
 
 .control-panel {
@@ -91,31 +86,92 @@ midi-player::part(control-panel) {
   align-items: center;
 }
 
-.container.theater-mode {
+.theater-mode {
   width: 100%;
-  max-width: 100vw;
 }
 
-.container.theater-mode > .row:first-child {
-  background-color: red;
+.theater-mode > .row:first-child {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  flex-wrap: nowrap;
 }
 
-.container.fullscreen-mode {
+.fullscreen-mode {
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
 
-.container.fullscreen-mode > .row:first-child {
-  height: calc(100% - 60px);
+.fullscreen-mode > .row:first-child {
+  height: 100%;
 }
 
-.container.fullscreen-mode #my-svg {
+.fullscreen-mode #my-svg {
   height: 100%;
   position: absolute;
+}
+
+.gradient-overlay {
+  position: absolute;
+  bottom: 0;
+  height: 100%;
+  max-height: 100px;
+  min-height: 60px;
+  z-index: 10;
+  width: 100%;
+  pointer-events: none;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(128, 128, 128, 0.15) 40%,
+    rgba(64, 64, 64, 0.3) 100%
+  );
+  opacity: 0;
+  animation-duration: 0.1s;
+  animation-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.hidden {
+  display: none;
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+  animation-fill-mode: forwards;
+}
+
+.fadeOut {
+  animation-name: fadeOut;
+  animation-fill-mode: forwards;
+}
+
+@keyframes pulse {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
