--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -39,6 +39,7 @@ midi-player::part(control-panel) {
   height: 20px; /* Initial height */
   transition: transform 0.3s ease; /* Smooth transition for scaling */
   transform-origin: top right;
+  user-select: none;
 }
 
 .pianoroll-link:hover {
