--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -14,6 +14,10 @@
   background-color: #f0f0f0;
 }
 
+.pianoroll-svg {
+  aspect-ratio: 16/9;
+}
+
 .note-rectangle {
   transition: width 1.3s ease-in-out, height 1.3s ease-in-out,
     x 1.3s ease-in-out, y 1.3s ease-in-out, fill 1.3s ease-in-out;
