--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -68,14 +68,12 @@ midi-player::part(control-panel) {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 4px;
 }
 
 .pianoroll-controls-right {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 4px;
 }
 
 .button {
@@ -124,7 +122,7 @@ input {
 
 input[type="range"] {
   appearance: none;
-  width: 64px;
+  width: 100%;
   height: 3px;
   background: rgba(255, 255, 255, 0.4);
   border-radius: 3px;
@@ -189,6 +187,25 @@ input[type="range"]::-ms-track {
   box-shadow: none;
   border: none;
   background: transparent;
+}
+
+.slider-wrapper {
+  width: 0;
+  transition: all 200ms;
+  visibility: hidden;
+  height: 40px;
+}
+
+#mute-button:hover + .slider-wrapper {
+  margin-right: 4px;
+  width: 64px;
+  visibility: visible;
+}
+
+.slider-wrapper:hover {
+  margin-right: 4px;
+  width: 64px;
+  visibility: visible;
 }
 
 .theater-mode {
