Updated player buttons stylings

--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -28,12 +28,6 @@
   transition-duration: 0.1s; /* Faster transition when activated */
 }
 
-midi-player::part(control-panel) {
-  background: #f0f0f0;
-  color: black;
-  border-radius: 8px;
-}
-
 .pianoroll-link {
   display: flex;
   position: absolute;
@@ -59,153 +53,8 @@ midi-player::part(control-panel) {
   gap: 4px;
   bottom: 0;
   z-index: 100;
-  /* pointer-events: none; */
   opacity: 0;
   padding: 0 4px;
-}
-
-.pianoroll-controls-left {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.pianoroll-controls-right {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.button {
-  height: 2.5rem;
-  width: 2.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0.25rem;
-  appearance: none;
-  border: none;
-  cursor: pointer;
-  color: #ffffff;
-  background-color: transparent;
-  overflow: hidden;
-  pointer-events: all;
-}
-
-#fullscreen-button:hover svg {
-  animation: pulse 0.3s ease-in-out;
-}
-
-#mute-button {
-  padding: 0.5rem;
-}
-
-.control-panel {
-  height: 60px;
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-}
-
-.slider-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-input {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-input[type="range"] {
-  appearance: none;
-  width: 100%;
-  height: 3px;
-  background: rgba(255, 255, 255, 0.4);
-  border-radius: 3px;
-  background-image: linear-gradient(#ffffff, #ffffff);
-  background-size: 85% 100%;
-  background-repeat: no-repeat;
-  cursor: pointer;
-}
-
-[dir="rtl"] input[type="range"] {
-  background: #ffffff;
-  background-image: linear-gradient(#ffffff, #ffffff);
-  background-size: 15% 100%;
-  background-repeat: no-repeat;
-}
-
-/* Input Thumb */
-input[type="range"]::-webkit-slider-thumb {
-  appearance: none;
-  height: 12px;
-  width: 12px;
-  border-radius: 50%;
-  background: #ffffff;
-  box-shadow: 0 0 2px 0 #505050;
-}
-
-input[type="range"]::-moz-range-thumb {
-  appearance: none;
-  height: 12px;
-  width: 12px;
-  border-radius: 50%;
-  background: #ffffff;
-  box-shadow: 0 0 2px 0 #505050;
-}
-
-input[type="range"]::-ms-thumb {
-  appearance: none;
-  height: 12px;
-  width: 12px;
-  border-radius: 50%;
-  background: #ffffff;
-  box-shadow: 0 0 2px 0 #505050;
-}
-
-/* Input Track */
-input[type="range"]::-webkit-slider-runnable-track {
-  appearance: none;
-  box-shadow: none;
-  border: none;
-  background: transparent;
-}
-
-input[type="range"]::-moz-range-track {
-  appearance: none;
-  box-shadow: none;
-  border: none;
-  background: transparent;
-}
-
-input[type="range"]::-ms-track {
-  appearance: none;
-  box-shadow: none;
-  border: none;
-  background: transparent;
-}
-
-.slider-wrapper {
-  width: 0;
-  transition: all 200ms;
-  visibility: hidden;
-  height: 40px;
-}
-
-#mute-button:hover + .slider-wrapper {
-  margin-right: 4px;
-  width: 64px;
-  visibility: visible;
-}
-
-.slider-wrapper:hover {
-  margin-right: 4px;
-  width: 64px;
-  visibility: visible;
 }
 
 .theater-mode {
@@ -270,7 +119,7 @@ input[type="range"]::-ms-track {
   animation-fill-mode: forwards;
 }
 
-@keyframes pulse {
+/* @keyframes pulse {
   0%,
   100% {
     transform: scale(1);
@@ -278,7 +127,7 @@ input[type="range"]::-ms-track {
   50% {
     transform: scale(1.2);
   }
-}
+} */
 
 @keyframes fadeIn {
   0% {
@@ -298,6 +147,52 @@ input[type="range"]::-ms-track {
   }
 }
 
+.button {
+  height: 2.5rem;
+  width: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0.25rem;
+  appearance: none;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  overflow: hidden;
+}
+
+/* #fullscreen-button:hover svg {
+  animation: pulse 0.3s ease-in-out;
+} */
+
+/* #mute-button {
+  padding: 0.5rem;
+} */
+
+/* #mute-button:hover + .slider-wrapper {
+  margin-right: 4px;
+  width: 64px;
+  visibility: visible;
+} */
+
+/* .slider-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 0;
+  transition: all 200ms;
+  visibility: hidden;
+  height: 40px;
+} */
+
+/* .slider-wrapper:hover {
+  margin-right: 4px;
+  width: 64px;
+  visibility: visible;
+} */
+
 midi-player {
   margin: 0;
   width: 100%;
@@ -306,7 +201,7 @@ midi-player {
 midi-player::part(control-panel) {
   padding: 0;
   background: transparent;
-  color: #ffffff;
+  color: #ddd;
   border-radius: 0;
 }
 
@@ -323,11 +218,43 @@ midi-player::part(pianoroll-controls-right) {
   align-items: center;
 }
 
-midi-player::part(play-button) {
+/* midi-player::part(mute-button) {
+  padding: 0.5rem;
+} */
+
+midi-player::part(play-button),
+midi-player::part(mute-button),
+midi-player::part(fullscreen-button) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   height: 2.5rem;
   width: 2.5rem;
+  color: #eee;
+  transition: color 150ms ease;
+}
+
+midi-player::part(play-button):hover,
+midi-player::part(mute-button):hover,
+midi-player::part(fullscreen-button):hover {
   color: #fff;
+  background: none;
+}
+
+midi-player::part(time) {
+  height: 100%;
+  padding: 0 0.375rem;
+  white-space: nowrap;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: normal;
+}
+
+midi-player::part(volume) {
+  margin: 0;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 midi-player::part(seek-bar) {
