--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -3,15 +3,27 @@
   padding: 0 !important;
 }
 
-.row {
+/* .row {
   margin: 0 !important;
-}
+} */
 
 .pianoroll-svg-wrapper {
   position: relative;
   border: 3px solid black;
   padding: 0px !important;
   background-color: #f0f0f0;
+  height: 100%;
+}
+
+.pianoroll-progress-bar-wrapper {
+  border: 3px solid black;
+  border-top: none;
+}
+
+.pianoroll-progress-bar {
+  background-color: red;
+  width: 100%;
+  height: 6.25rem;
 }
 
 .pianoroll-svg {
@@ -31,10 +43,10 @@
 .pianoroll-link {
   display: flex;
   position: absolute;
-  top: 4px;
-  right: 4px;
-  width: 20px; /* Initial width */
-  height: 20px; /* Initial height */
+  top: 0.25rem;
+  right: 0.25rem;
+  width: 1.25rem; /* Initial width */
+  height: 1.25rem; /* Initial height */
   transition: transform 0.3s ease; /* Smooth transition for scaling */
   transform-origin: top right;
   user-select: none;
@@ -50,11 +62,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 4px;
+  gap: 0.25rem;
   bottom: 0;
   z-index: 100;
   opacity: 0;
-  padding: 0 4px;
+  padding: 0 0.25rem;
 }
 
 .theater-mode {
@@ -88,8 +100,8 @@
   position: absolute;
   bottom: 0;
   height: 100%;
-  max-height: 100px;
-  min-height: 60px;
+  max-height: 6.25rem;
+  min-height: 3.75rem;
   z-index: 10;
   width: 100%;
   pointer-events: none;
