--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -115,7 +115,7 @@
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .fadeIn {
@@ -235,9 +235,22 @@ midi-player::part(volume) {
 }
 
 midi-player::part(seek-bar) {
-  /* display: none; */
+  display: none;
+  pointer-events: none;
+  user-select: none;
   position: absolute;
   margin: 0;
   top: -0.5rem;
   width: 100%;
+}
+
+midi-player::part(custom-seek-bar) {
+  position: absolute;
+  margin: 0;
+  top: -3px;
+  width: 100%;
+}
+
+midi-player::part(custom-seek-bar):hover {
+  top: -4px;
 }
