--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -14,6 +14,7 @@
 .pianoroll-progress-bar-wrapper {
   border: 3px solid black;
   border-top: none;
+  cursor: pointer;
 }
 
 .pianoroll-progress-bar {
