Added height calculation for progress svg

--- a/streamlit_pianoroll/frontend/public/styles.css
+++ b/streamlit_pianoroll/frontend/public/styles.css
@@ -20,7 +20,7 @@
 .pianoroll-progress-bar {
   background-color: whitesmoke;
   width: 100%;
-  height: 6.25rem;
+  /* height: 6.25rem; */
 }
 
 .pianoroll-svg {
